--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@supabase/supabase-js": "^2.45.0",
     "date-fns": "^3.6.0",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
+    "react-day-picker": "^9.0.6",
     "react-dom": "^18"
   },
   "devDependencies": {
